##########################################################################
cmake_minimum_required(VERSION 3.0.8)
##########################################################################
project(miyo-tool-img2arr)
##########################################################################
set(MIYO_TOOL_IMG2ARR_TARGET miyo-img2arr)
##########################################################################
find_package(OpenCV REQUIRED)
##########################################################################
include_directories(
  ${OpenCV_INCLUDE_DIRS}
)
##########################################################################
add_executable(${MIYO_TOOL_IMG2ARR_TARGET}
  main.cpp
)
##########################################################################
target_compile_options(${MIYO_TOOL_IMG2ARR_TARGET} PUBLIC -Wall -Wextra -Wpedantic -Werror)
##########################################################################
target_link_libraries(${MIYO_TOOL_IMG2ARR_TARGET} ${OpenCV_LIBS})
##########################################################################
